# MSA-Do-an

./: .env  .gitignore  README.md  implementation_plan.md  pyproject.toml  requirements.txt  task.md
.agent/: README.md
.github/: README.md
Personal Information/: phan_cong.md
Src/: SPEC.md  __init__.py  architecture.md  data_processor.py  factor_analysis.py  llm_namer.py  main.py  main_cli.py  main_gui.py  requirements.txt  walkthrough.md
data/: OCEAN_preprocessed.csv  sample-results.json  sample.csv  sample_factor_analysis.csv
docs/: SPEC.md  experimental_report_en.md  implementation_plan.md  task.md  walkthrough.md
scripts/: run_cli.ps1  run_gui.ps1
