[project]
name = "do-an"
version = "0.1.0"
description = "Factor analysis application with Ollama-based factor naming"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "factor-analyzer>=0.5.1",
    "matplotlib>=3.9",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.5,<1.6",
]

[project.scripts]
factor-analysis = "src.main:main"
factor-analysis-cli = "src.main_cli:main"
